deploy/manifests/staging/bases/website/deployment-patch.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: website

spec:
  template:
    spec:
      containers:
        - name: website
