deploy/manifests/staging/bases/website/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: website-com
  namespace: hubrise-www
  labels:
    app: website
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"

spec:
  tls:
    - hosts:
        - staging-hubrise.com
        - www.staging-hubrise.com
      secretName: website-com-cert

  rules:
    - host: www.staging-hubrise.com
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 80
